[package]
name = "cond"
version = "1.0.5"
authors = ["CheckM4te"]
license = "MIT"
description = "Rust macro to use a match-like syntax as an elegant alternative to nesting if-else statements"
homepage = "https://github.com/checkm4ted/cond"
edition = "2021"
repository = "https://github.com/checkm4ted/cond"
documentation = "https://docs.rs/cond"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
